<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    tools:context=".ui.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:background="@color/colorDarkGrey"
        android:paddingTop="@dimen/margin4"
        android:paddingBottom="11dp">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin8"
            android:layout_marginTop="@dimen/margin2"
            android:layout_marginEnd="@dimen/margin8"
            android:textIsSelectable="true"
            android:background="@color/colorDarkGrey"
            android:text="@string/lyrics_for"
            android:textColor="@color/app_text_label"
            android:textSize="15sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/divider"
            android:layout_below="@+id/tvHeading"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin1"
            android:layout_marginBottom="@dimen/margin1"
            android:background="@color/app_window_bglight_color"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/tvLyrics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvHeading"
                android:layout_marginStart="@dimen/margin8"
                android:layout_marginTop="@dimen/margin2"
                android:layout_marginEnd="@dimen/margin5"
                android:background="@null"
                android:textIsSelectable="true"
                android:textColor="@color/colorAccent" />
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/action_close"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_background"
            android:text="@string/cerrar_string"
            android:textAlignment="center"
            android:textColor="#33bbff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/action_copy_all"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/border_background"
            android:text="@string/copy_to"
            android:textAlignment="center"
            android:textColor="#33bbff"
            android:textSize="15sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="25dp"
            android:background="@color/colorDarkGrey" />

    </RelativeLayout>


</RelativeLayout>